--- a/settings.gradle
+++ b/settings.gradle
@@ -4,9 +4,8 @@ pluginManagement {
         google()
         mavenCentral()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
 }
 dependencyResolutionManagement {
@@ -15,9 +14,8 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
 }
 rootProject.name = "Vern"
