--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.github.fasseg:exp4j:0.3.5'
     implementation 'io.apisense:rhino-android:1.1.1'
     //implementation 'com.github.MacFJA:OBD2:1.1.0'
+    implementation "androidx.fragment:fragment:1.5.6"
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
